[gd_scene load_steps=28 format=2]

[ext_resource path="res://player/player_scripts/player.gd" type="Script" id=1]
[ext_resource path="res://player/topdown_sprites/character_5_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://player/topdown_sprites/character_5_arm.png" type="Texture" id=3]
[ext_resource path="res://player/player_sprites/character_4_head.png" type="Texture" id=4]
[ext_resource path="res://player/items/rifle.png" type="Texture" id=5]
[ext_resource path="res://player/topdown_sprites/character_5_rightarm.png" type="Texture" id=6]
[ext_resource path="res://effects/glow_square.png" type="Texture" id=7]
[ext_resource path="res://player/topdown_sprites/helmet.png" type="Texture" id=8]
[ext_resource path="res://sfx/pistol_2.wav" type="AudioStream" id=9]
[ext_resource path="res://sfx/retro_hit.wav" type="AudioStream" id=10]
[ext_resource path="res://sfx/retro_footsteps.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.33333, 7.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.44444, 8.27778 )

[sub_resource type="Animation" id=15]
resource_name = "arm_walk_down"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("../body/rightarm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=11]
resource_name = "arm_walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../body/rightarm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=12]
resource_name = "arm_walk_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../body/rightarm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=16]
resource_name = "arm_walk_up"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("../body/rightarm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_left"
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=13]
resource_name = "walk_down"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=14]
resource_name = "walk_up"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="ParticlesMaterial" id=17]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
angular_velocity = 211.76
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -250.0
scale = 0.03
color = Color( 0.87451, 0.886275, 0.607843, 1 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 1, 1.5 )

[node name="player" type="KinematicBody2D" groups=["players"]]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 1 )

[node name="hitsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
attenuation = 8.57417

[node name="walkingsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
attenuation = 8.57417

[node name="col_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="area2d" type="Area2D" parent="."]

[node name="col_shape_2d" type="CollisionShape2D" parent="area2d"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="player_body" type="Node2D" parent="."]

[node name="rightarm_anim" type="AnimationPlayer" parent="player_body"]
root_node = NodePath("../anim_player")
anims/arm_walk_down = SubResource( 15 )
anims/arm_walk_left = SubResource( 11 )
anims/arm_walk_right = SubResource( 12 )
anims/arm_walk_up = SubResource( 16 )

[node name="anim_player" type="AnimationPlayer" parent="player_body"]
anims/idle_down = SubResource( 5 )
anims/idle_left = SubResource( 6 )
anims/idle_right = SubResource( 8 )
anims/idle_up = SubResource( 7 )
anims/walk_down = SubResource( 13 )
anims/walk_left = SubResource( 10 )
anims/walk_right = SubResource( 9 )
anims/walk_up = SubResource( 14 )

[node name="body" type="Sprite" parent="player_body"]
position = Vector2( 0.5, 0 )
texture = ExtResource( 2 )
hframes = 8
vframes = 5
frame = 8

[node name="rightarm" type="Sprite" parent="player_body/body"]
visible = false
texture = ExtResource( 6 )
hframes = 8
vframes = 5
frame = 8

[node name="frontarm" type="Sprite" parent="player_body/body"]
position = Vector2( -2.5, -4.5 )
texture = ExtResource( 3 )
offset = Vector2( 0, 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="pistol_shot" type="AudioStreamPlayer2D" parent="player_body/body/frontarm"]
position = Vector2( 2, 4.5 )
stream = ExtResource( 9 )
attenuation = 4.43828

[node name="muzzle_flash" type="Particles2D" parent="player_body/body/frontarm"]
position = Vector2( 1, 11.5 )
rotation = 1.5708
emitting = false
amount = 20
lifetime = 0.1
one_shot = true
explosiveness = 1.0
randomness = 0.33
process_material = SubResource( 17 )
texture = ExtResource( 7 )

[node name="held_item" type="Sprite" parent="player_body/body/frontarm"]
visible = false
position = Vector2( 0.5, 7 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="intr_cast" type="RayCast2D" parent="player_body/body/frontarm"]
position = Vector2( 0, 3 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="proj_spawn" type="Position2D" parent="player_body/body/frontarm"]
position = Vector2( 1, 16.5 )

[node name="pickup_area" type="Area2D" parent="player_body/body/frontarm"]

[node name="pickup_col" type="CollisionShape2D" parent="player_body/body/frontarm/pickup_area"]
position = Vector2( 0, 6.5 )
shape = SubResource( 18 )

[node name="head" type="Sprite" parent="player_body"]
position = Vector2( 0, -5 )
texture = ExtResource( 4 )
offset = Vector2( 0, -1 )

[node name="helmet" type="Sprite" parent="player_body/head"]
visible = false
position = Vector2( 0, -1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="cam2d" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.1, 0.1 )
smoothing_enabled = true
smoothing_speed = 10.0

[connection signal="body_entered" from="area2d" to="." method="_on_area2d_body_entered"]
[connection signal="body_entered" from="player_body/body/frontarm/pickup_area" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="player_body/body/frontarm/pickup_area" to="." method="_on_pickup_area_body_exited"]
